# byteview

./: .gitignore  Cargo.toml  README.md
.github/workflows/: miri.yml  test.yml
fuzz/: Cargo.toml
src/: builder.rs  byteview.rs  lib.rs  strview.rs
