[package]
name = "byteview"
description = "Thin, immutable zero-copy slice type"
license = "MIT OR Apache-2.0"
version = "0.10.1"
edition = "2021"
rust-version = "1.87"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/byteview"
categories = ["data-structures"]
keywords = ["german-string", "string-view", "byte-slice"]

[lib]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
bytes = "1"
criterion = { version = "0.5", features = ["html_reports"] }
nanoid = "0.4.0"
rand = "0.9.2"
rkyv = { version = "0.8.15", features = ["bytecheck", "unaligned"] }
serde_json = "1.0.149"

[[bench]]
name = "bench"
harness = false
